--- a/style.css
+++ b/style.css
@@ -13,11 +13,66 @@ body {
 	left: 50%;
 	margin: auto;
 	width: 25%;
+	height: 630px;
 	min-width: 350px;
-	max-height: 630px;
 	position: absolute;
+	overflow: hidden;
 	box-shadow: 0 0 40px #a0a0a0;
 	transform: translate(-50%, -50%);
+}
+
+.hidden-menu {
+	top: 0;
+	left: -100%;
+	z-index: 2;
+	width: 50%;
+	height: 100%;
+	position: absolute;
+	transition: 1s;
+	background-color: #343a40;
+
+}
+
+.hidden-menu i.fa-times {
+	top: 15px;
+	right: 15px;
+	font-size: 1.4em;
+	position: absolute;
+}
+
+.hidden-menu ul {
+	margin: 0;
+	padding: 2em 1.5em;
+	list-style: none;
+}
+
+.hidden-menu a {
+	color: #fff;
+	display: block;
+	text-decoration: none;
+	letter-spacing: 0.2em;
+	text-transform: uppercase;
+	margin-bottom: 1em;
+	position: relative;
+	transition: 5s;
+
+}
+
+.hidden-menu li a::before {
+	content: '';
+	width: 100%;
+	height: 1px;
+	background: #fff;
+	position: absolute;
+	left: -100%;
+	bottom: -5px;
+	opacity: 0;
+	transition: 2s;
+}
+
+.hidden-menu li a:hover::before {
+	opacity: 1;
+	left: 0;
 }
 
 .navbar {
@@ -26,14 +81,15 @@ body {
 	background: #B97CFC;
 	display: flex;
 	align-items: center;
+	position: relative;
 	justify-content: space-between;
 }
-
 
 i.fa-bars {
 	color: #fff;
 	font-size: 1.3em;
 }
+
 
 span {
 	font-size: 1.1em;
@@ -194,6 +250,9 @@ footer {
 	background: #222;
 	display: flex;
 	align-items: center;
+	position: absolute;
+	left: 0;
+	bottom: 0;
 	justify-content: space-around;
 }
 
