--- a/timeline/style.css
+++ b/timeline/style.css
@@ -1,13 +1,36 @@
+/*====================================
+fonts
+====================================*/
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
+/*====================================
+body
+====================================*/
 body {
 	margin: 0;
 	padding: 0;
 	height: 100vh;
 	position: relative;
 	font-family: 'Open Sans', sans-serif;
+
 }
 
+
+body::before {
+	top: 0;
+	left: 0;
+	width: 100%;
+	content: '';
+	height: inherit;
+	position: absolute;
+	filter: blur(0.2em);
+	background-size: cover;
+	background: url('https://img1.goodfon.ru/original/1280x1024/4/39/peyzazh-priroda-more-voda-pirs.jpg') no-repeat 100% 100%;
+}
+
+/*====================================
+container
+====================================*/
 .container {
 	top: 50%;
 	left: 50%;
@@ -15,22 +38,23 @@ body {
 	width: 25%;
 	height: 630px;
 	min-width: 350px;
-	position: absolute;
 	overflow: hidden;
-	box-shadow: 0 0 40px #a0a0a0;
+	position: absolute;
 	transform: translate(-50%, -50%);
 }
 
+/*====================================
+hidden-menu 
+====================================*/
 .hidden-menu {
 	top: 0;
-	left: -100%;
 	z-index: 2;
 	width: 50%;
+	left: -100%;
 	height: 100%;
-	position: absolute;
 	transition: 1s;
+	position: absolute;
 	background-color: #343a40;
-
 }
 
 .hidden-menu i.fa-times {
@@ -42,46 +66,48 @@ body {
 
 .hidden-menu ul {
 	margin: 0;
-	padding: 2em 1.5em;
 	list-style: none;
+	padding: 2em 1.5em;
 }
 
 .hidden-menu a {
 	color: #fff;
 	display: block;
+	transition: 5s;
+	margin-bottom: 1em;
+	position: relative;
 	text-decoration: none;
 	letter-spacing: 0.2em;
 	text-transform: uppercase;
-	margin-bottom: 1em;
-	position: relative;
-	transition: 5s;
-
 }
 
 .hidden-menu li a::before {
+	opacity: 0;
 	content: '';
 	width: 100%;
 	height: 1px;
-	background: #fff;
-	position: absolute;
 	left: -100%;
 	bottom: -5px;
-	opacity: 0;
 	transition: 2s;
+	background: #fff;
+	position: absolute;
 }
 
 .hidden-menu li a:hover::before {
-	opacity: 1;
 	left: 0;
+	opacity: 1;
 }
 
+/*====================================
+navbar
+====================================*/
 .navbar {
-	padding: 1em 0.5em;
 	color: #fff;
-	background: #B97CFC;
 	display: flex;
-	align-items: center;
+	padding: 1em 0.5em;
 	position: relative;
+	background: #B97CFC;
+	align-items: center;
 	justify-content: space-between;
 }
 
@@ -109,15 +135,18 @@ span {
 }
 
 .notifaction {
-	width: 5px;
-	height: 5px;
 	top: 2px;
+	width: 5px;
 	right: 2px;
+	height: 5px;
 	border-radius: 50%;
-	background: #F93B69;
 	position: absolute;
+	background: #F93B69;
 }
 
+/*====================================
+header
+====================================*/
 header {
 	color: #fff;
 	position: relative;
@@ -147,26 +176,34 @@ header {
 .month {
 	font-size: 0.6em;
 	font-weight: 300;
-	letter-spacing: 2px;
 	margin-top: 2px;
+	letter-spacing: 2px;
 	text-transform: uppercase;
 }
 
 .actionbutton {
 	width: 50px;
-	height: 50px;
 	right: 20px;
+	height: 50px;
 	bottom: -25px;
-	border-radius: 50%;
-	background: #F93B69;
-	position: absolute;
 	display: flex;
+	font-size: 2em;
+	cursor: pointer;
+	font-weight: 300;
+	border-radius: 50%;
+	position: absolute;
 	align-items: center;
+	background: #F93B69;
 	justify-content: center;
 	box-shadow: 0 0 5px #202020;
-	font-size: 2em;
-	font-weight: 300;
-	cursor: pointer;
+}
+
+/*====================================
+timeline
+====================================*/
+.timeline {
+	height: 100%;
+	background: #fff;
 }
 
 .timeline ul {
@@ -189,8 +226,8 @@ header {
 
 .timeline li div {
 	margin: 1em 0;
-	display: inline-block;
 	vertical-align: top;
+	display: inline-block;
 }
 
 .timeline .bullet {
@@ -198,8 +235,8 @@ header {
 	height: 1em;
 	z-index: 1;
 	background: #fff;
-	border-radius: 50%;
 	margin-right: 1em;
+	border-radius: 50%;
 	box-sizing: border-box;
 }
 
@@ -226,16 +263,16 @@ header {
 }
 
 .timeline h3 {
+  margin: 0;
   font-size: 0.9em;
   font-weight: 400;
-  margin: 0;
 }
 
 .timeline h4 {
   margin: 0;
+  color: #808080;
   font-size: 0.7em;
   font-weight: 400;
-  color: #808080;
 }
 
 .timeline .people img {
@@ -244,15 +281,17 @@ header {
   border-radius: 50%;
 }
 
+/*====================================
+footer
+====================================*/
 footer {
 	width: 100%;
 	height: 50px;
-	background: #222;
 	display: flex;
-	align-items: center;
+	background: #222;
 	position: absolute;
-	left: 0;
-	bottom: 0;
+	left: 0; bottom: 0;
+	align-items: center;
 	justify-content: space-around;
 }
 
@@ -264,4 +303,25 @@ footer .fa {
 footer .fa:hover {
 	color: #B97CFC;
 	transform: rotate(360deg) scale(1.6);
+}
+
+/*====================================
+author
+====================================*/
+.author {
+	left: 50%;
+	margin: 0;
+	padding: 0;
+	color: #fff;
+	bottom: 50px;
+	position: absolute;
+	text-decoration: none;
+	transform: translateX(-50%);
+	border-bottom: 1px dashed #fff;
+}
+
+.author i {
+	color: #fff;
+	margin-left: 5px;
+	vertical-align: center;
 }
